<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caret_trace</name>
  <version>0.5.0</version>
  <description>Library to add tracepoints for CARET</description>
  <maintainer email="yamasaki@isp.co.jp">ymski</maintainer>
  <maintainer email="uetsuki@isp.co.jp">isp-uetsuki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>caret_msgs</depend>
  <depend>cyclonedds</depend>
  <depend>fastrtps</depend>
  <depend>liblttng-ust-dev</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_fastrtps_shared_cpp</depend>
  <depend>rmw_implementation</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>caret_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
